src/objects/EventApi__Event_Status__c.object
<CustomObject>
    <description>Represents the different stages of an event&apos;s life cycle, as well as changes the visual look of the event.</description>
    <fields>
        <fullName>EventApi__Closed_Status_Text__c</fullName>
        <description>The text entered in this field will appear in bold in place of the register button when the registration is closed.</description>
        <inlineHelpText>The text entered in this field will appear in bold in place of the register button when the
            registration is closed.</inlineHelpText>
        <label>Closed Status Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Transition_for_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, enables an automatic transition to this status based on its Status Transition Criteria.</description>
        <inlineHelpText>When checked, enables an automatic transition to this status based on its Status Transition Criteria.</inlineHelpText>
        <label>Enable Transition for Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>** REQUIRED ** Link to related Event.</description>
        <inlineHelpText>** REQUIRED ** Link to related Event.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Event Statuses</relationshipLabel>
        <relationshipName>Event_Statuses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Filter_Transition_Criteria__c</fullName>
        <description>JSON field to save the Filter Condition, Filter Transition Criteria and Advanced Status.</description>
        <inlineHelpText>JSON field to save the Filter Condition, Filter Transition Criteria and Advanced Status.</inlineHelpText>
        <label>System</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Current_Status_for_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** SYSTEM CALCULATED/OVERRIDE ** When checked, the status will be set as the current event status. The status field on the event will also be updated.</description>
        <inlineHelpText>** SYSTEM CALCULATED/OVERRIDE ** When checked, the status will be set as the current event status. The status field on the event will also be updated.</inlineHelpText>
        <label>Is Current Status for Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Event_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the status is set as the current event status, the value of this field will be mapped to the Is Active field on the event.</description>
        <inlineHelpText>When the status is set as the current event status, the value of this field will be mapped to the Is Active field on the event.</inlineHelpText>
        <label>Is Event Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Event_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a status is set as the current event status, the value of this field will be mapped to the Is Published field on the event.</description>
        <inlineHelpText>When a status is set as the current event status, the value of this field will be mapped to the Is Published field on the event.</inlineHelpText>
        <label>Is Event Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Order__c</fullName>
        <description>** REQUIRED ** Defines the timeline for an event&apos;s statuses, automatic event transitions will only occur in ascending order.</description>
        <inlineHelpText>** REQUIRED ** Defines the timeline for an event&apos;s statuses, automatic event transitions will only occur in ascending order.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Status_Transition_Criteria__c</fullName>
        <description>** CONDITIONALLY REQUIRED ** SOQL query WHERE clause for automating the transition to this status on the Event. A value for this field is required when the Enable Transition for Status checkbox is checked.</description>
        <inlineHelpText>** CONDITIONALLY REQUIRED ** SOQL query WHERE clause for automating the transition to this status on the Event. A value for this field is required when the Enable Transition for Status checkbox is checked.</inlineHelpText>
        <label>Status Transition Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Event Status</label>
    <nameField>
        <label>Event Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>